<resources>
    <string name="app_name">NTUcylsAndroidApp</string>

    <string name="title_home">主頁</string>
    <string name="title_friends">好友</string>
    <string name="title_setting">設定</string>
    <string name="home">home</string>

    <string name="theme_colors">主題顏色</string>
    <string name="logout">登出</string>
    <string name="personal_info">個人資料</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
</resources>