<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ntucylsandroidapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_friends" />
        <argument
            android:name="username"
            android:defaultValue="tyler"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.ntucylsandroidapp.ui.setting.SettingFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_setting"></fragment>


    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.example.ntucylsandroidapp.ui.friend.FriendsFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_friends" />
    <fragment
        android:id="@+id/theme_color"
        android:name="com.example.ntucylsandroidapp.ui.themecolors.Theme_color"
        android:label="theme_color_fragment"
        tools:layout="@layout/theme_color_fragment" />
</navigation>